[package]
name = "jf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde-transcode = "1.1.1"
serde_json = { version = "1.0.68", features = ["std"] }

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"